--- a/cgv.html
+++ b/cgv.html
@@ -3,30 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <title>CGV – Nuklal</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    body{font-family:Helvetica,Arial,sans-serif;background:#111;color:#fff;margin:0;padding:2rem;max-width:800px;margin:auto}
-    h1{color:#d4af37}
-    a{color:#d4af37;text-decoration:none}
+    body{font-family:Helvetica,Arial,sans-serif;background:#111;color:#fff;line-height:1.6;padding:2rem 1rem;max-width:800px;margin:auto}
+    h1{color:#d4af37;margin-bottom:1rem}
+    h2{margin-top:2rem;color:#d4af37}
   </style>
 </head>
 <body>
   <h1>Conditions Générales de Vente</h1>
-  <p><strong>1. Préambule</strong><br>
-    Les présentes conditions régissent les ventes de Nuklal.</p>
+  <p>Dernière mise à jour : 29 juillet 2025</p>
 
-  <p><strong>2. Prix et paiement</strong><br>
-    Les prix sont indiqués en CHF, paiement sécurisé par Snipcart (cartes, PayPal).</p>
+  <h2>1 – Objet</h2>
+  <p>Les présentes conditions régissent la vente des produits proposés sur le site www.nuklal.com.</p>
 
-  <p><strong>3. Livraison</strong><br>
-    Suisse : 5-7 jours ouvrés – Monde : 10-15 jours.</p>
+  <h2>2 – Prix et paiement</h2>
+  <p>Les prix sont indiqués en CHF, TVA comprise. Le paiement s’effectue via Stripe ou Apple Pay.</p>
 
-  <p><strong>4. Retour</strong><br>
-    14 jours après réception, frais de retour à la charge du client.</p>
+  <h2>3 – Livraison</h2>
+  <p>Livraison en Suisse sous 48-72 h, international sous 5-7 jours ouvrés.</p>
 
-  <p><strong>5. Responsable</strong><br>
-    Yacine B. – contact@nuklal.com</p>
+  <h2>4 – Droit de rétractation</h2>
+  <p>14 jours à compter de la réception pour retourner un produit non porté.</p>
 
-  <p><a href="/">← Retour au site</a></p>
+  <h2>5 – Responsabilité</h2>
+  <p>Nuklal ne saurait être tenu responsable des dommages indirects.</p>
+
+  <h2>6 – Service client</h2>
+  <p>Email : <a href="mailto:contact@nuklal.com">contact@nuklal.com</a></p>
+
+  <p style="margin-top:2rem"><a href="/" style="color:#d4af37">← Retour à l’accueil</a></p>
 </body>
 </html>
