--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   <!-- Formulaire de contact -->
   <section id="contact" style="padding:2rem 1rem;max-width:600px;margin:auto">
     <h2>Contact</h2>
-    <form action="https://formspree.io/f/YOUR_ID" method="POST" style="display:grid;gap:1rem">
+    <form action="https://formspree.io/f/xrblkogl" method="POST" style="display:grid;gap:1rem">
       <label>Nom
         <input type="text" name="nom" required style="width:100%;padding:.5rem;border:none;border-radius:var(--radius)">
       </label>
