--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
       <div><h3>Liens utiles</h3><ul><li><a href="#home">Accueil</a></li><li><a href="#products">Produits</a></li><li><a href="cgv.html" target="_blank">CGV</a></li><li><a href="#contact">Contact</a></li></ul></div>
       <div><h3>Mentions légales</h3><ul><li><strong>Éditeur :</strong> Yacine B.</li><li><strong>Email :</strong> <a href="mailto:contact@nuklal.com">contact@nuklal.com</a></li><li><strong>Hébergeur :</strong> GitHub, Inc. – USA</li></ul></div>
       <div><h3>Suivez-nous</h3>
+      <ul><li><a href="login.html">Espace membre</a></li></ul>
         <div style="display:flex;gap:.8rem"><a href="https://instagram.com/nuklal" target="_blank">📸</a><a href="https://tiktok.com/@nuklal" target="_blank">🎵</a><a href="https://pinterest.com/nuklal" target="_blank">📌</a></div>
       </div>
     </div>
