--- a/login.html
+++ b/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Connexion – Nuklal</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -48,6 +48,7 @@
       'https://clylwpqwutslomyulopp.supabase.co',
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNseWx3cHF3dXRzbG9teXVsb3BwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM3ODg2NjAsImV4cCI6MjA2OTM2NDY2MH0.PgMpOD8iJSLAM-6-_dJrlSoIrgEsfi0M3fRgs3ojMOQ'
     );
+
     async function sendMagic() {
       const email = document.getElementById('email').value;
       if (!email) return;
