--- a/index.html
+++ b/index.html
@@ -70,17 +70,18 @@
 
   <!-- Navbar -->
   <nav>
-    <a href="#" class="brand">Nuklal</a>
-    <div class="nav-links" id="navLinks">
-      <a href="#home">Accueil</a>
-      <a href="#products">Produits</a>
-      <a href="#about">À propos</a>
-      <a href="#contact">Contact</a>
-      <a href="cgv.html" target="_blank">CGV</a>
-    </div>
-    <button id="themeToggle" title="Mode sombre/clair" style="background:none;border:none;color:var(--black);font-size:1.4rem;cursor:pointer">🌙</button>
-    <span class="hamburger" onclick="toggleMenu()">☰</span>
-  </nav>
+  <a href="#" class="brand">Nuklal</a>
+  <div class="nav-links" id="navLinks">
+    <a href="#home">Accueil</a>
+    <a href="#products">Produits</a>
+    <a href="#about">À propos</a>
+    <a href="#contact">Contact</a>
+    <a href="cgv.html" target="_blank">CGV</a>
+    <a href="membre.html">Espace membre</a> <!-- ← ici -->
+  </div>
+  <button id="themeToggle" title="Mode sombre/clair">🌙</button>
+  <span class="hamburger" onclick="toggleMenu()">☰</span>
+</nav>
 
   <!-- Hero Parallax -->
   <section class="hero-parallax">
