--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <!-- Promo banner -->
   <div id="promoBar">🔥 -10 % ce week-end avec le code WEEK10 → <button onclick="copyCode()">Copier</button></div>
-
+#promoBar + nav { margin-top: 3.3rem; } /* hauteur de la bannière */
   <!-- Navbar -->
   <nav>
   <a href="#" class="brand">Nuklal</a>
