--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
    
 #promoBar + nav{ margin-top: 3.3rem; } /* ← ajoute cette ligne */
-    #promoBar{position:fixed;top:0;left:0;right:0;background:#d4af37;color:#111;padding:.5rem 1rem;text-align:center;font-weight:600;z-index:1000}
+    #promoBar{width:100%;background:#d4af37;color:#111;padding:.5rem 1rem;text-align:center;font-weight:600;z-index:1000}
     #promoBar button{margin-left:.5rem;background:#111;color:#d4af37;border:none;padding:.2rem .5rem;border-radius:4px;cursor:pointer}
     .hero-parallax{height:60vh;background:url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat fixed;display:flex;align-items:center;justify-content:center;color:#fff;text-align:center;font-size:2rem;font-weight:700;text-shadow:0 0 10px rgba(0,0,0,.6)}
     .filters{display:flex;flex-wrap:wrap;gap:1rem;justify-content:center;margin-bottom:2rem;background:#1a1a1a;padding:1rem;border-radius:var(--radius)}
@@ -254,7 +254,7 @@
   </footer>
 
   <!-- Pop-up exit-intent -->
-  <div id="exitPop">
+<!--   <div id="exitPop">
     <div>
       <h3>🎁 -5 % de réduction</h3>
       <p>Abonne-toi à notre newsletter et gagne 5 % de réduction immédiate.</p>
@@ -262,7 +262,7 @@
       <button onclick="popSubmit()">Recevoir ma réduction</button>
       <button onclick="closePop()">Non merci</button>
     </div>
-  </div>
+  </div> -->
 
   <!-- Snipcart -->
   <script src="https://cdn.snipcart.com/themes/v3.0.31/default/snipcart.js" async></script>
