--- a/index.html
+++ b/index.html
@@ -2,49 +2,42 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Nuklal – Vêtements premium suisses | Livraison mondiale</title>
-  <!-- Meta optimisées -->
+  <title>Nuklal – nous méritons le meilleur</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Boutique suisse de vêtements premium. Livraison express en Europe, matériaux durables, designs exclusifs.">
-  <meta name="keywords" content="mode suisse, vêtements premium, livraison rapide, qualité durable">
+  <meta name="description" content="Boutique premium de vêtements et accessoires – livraison Suisse & monde. Collections uniques, paiement sécurisé.">
+  <meta name="keywords" content="mode premium, vêtements, accessoires, Suisse, livraison express">
   <link rel="canonical" href="https://nuklal.com">
 
   <!-- Open Graph / Twitter -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Nuklal – Vêtements premium suisses">
-  <meta property="og:description" content="Découvrez nos collections exclusives fabriquées en Suisse.">
-  <meta property="og:image" content="https://nuklal.com/images/social-share.jpg">
+  <meta property="og:title" content="Nuklal – nous méritons le meilleur">
+  <meta property="og:description" content="Découvre nos collections premium.">
+  <meta property="og:image" content="https://nuklal.com/favicon-512.png">
   <meta property="og:url" content="https://nuklal.com">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@nuklal">
 
-  <!-- Preload & PWA -->
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" as="style">
+  <!-- PWA -->
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#c9a227">
-  <link rel="icon" href="favicon.png" type="image/png">
+  <meta name="theme-color" content="#d4af37">
+  <link rel="icon" href="favicon.png">
   <link rel="apple-touch-icon" href="favicon.png">
 
   <style>
     :root {
       --black: #111;
-      --gold: #c9a227; /* Contraste WCAG OK */
+      --gold: #d4af37;
       --gray: #222;
       --radius: 10px;
       --transition: .3s ease;
     }
 
-    /* Police chargée progressivement */
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, 
-                   Helvetica, Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background: var(--black);
       color: #fff;
       line-height: 1.6;
-      margin: 0;
+      transition: background var(--transition), color var(--transition);
     }
 
-    /* Navigation améliorée */
     nav {
       background: var(--gold);
       display: flex;
@@ -53,7 +46,7 @@
       padding: .8rem 1.2rem;
       position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 999;
     }
 
     nav a {
@@ -61,13 +54,6 @@
       font-weight: 600;
       text-decoration: none;
       margin: 0 .6rem;
-      padding: .3rem 0;
-      border-bottom: 2px solid transparent;
-      transition: var(--transition);
-    }
-
-    nav a:hover, nav a.active {
-      border-color: var(--black);
     }
 
     .brand {
@@ -75,124 +61,251 @@
       font-weight: 800;
     }
 
-    /* Mobile first */
     .hamburger {
       display: none;
-      background: none;
-      border: none;
       font-size: 1.6rem;
       cursor: pointer;
     }
 
-    @media (max-width: 600px) {
-      .hamburger { display: block; }
-      .nav-links {
-        display: none;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        background: var(--gold);
-        padding: 1rem;
-      }
-      .nav-links.show { display: flex; }
+    .nav-links {
+      display: flex;
+      align-items: center;
+      gap: .5rem;
     }
 
-    /* Promo bar accessible */
+    @media (max-width: 600px) {
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        background: var(--gold);
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 100%;
+      }
+
+      .nav-links a {
+        padding: .8rem;
+        border-top: 1px solid #000;
+      }
+
+      .hamburger {
+        display: block;
+      }
+    }
+
     #promoBar {
-      background: #111;
-      color: var(--gold);
-      padding: .8rem;
+      width: 100%;
+      background: var(--gold);
+      color: #111;
+      padding: .5rem 1rem;
       text-align: center;
-      font-weight: 700;
+      font-weight: 600;
+      z-index: 1000;
     }
 
     #promoBar button {
-      background: var(--gold);
-      color: #111;
+      margin-left: .5rem;
+      background: #111;
+      color: var(--gold);
       border: none;
-      padding: .3rem .8rem;
+      padding: .2rem .5rem;
       border-radius: 4px;
-      font-weight: 700;
-      margin-left: 1rem;
+      cursor: pointer;
     }
 
-    /* Hero optimisé */
     .hero-parallax {
-      height: 70vh;
-      background: url('hero-image-optimized.jpg') center/cover no-repeat;
+      height: 60vh;
+      background: url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat fixed;
       display: flex;
       align-items: center;
       justify-content: center;
+      color: #fff;
       text-align: center;
+      font-size: 2rem;
+      font-weight: 700;
+      text-shadow: 0 0 10px rgba(0, 0, 0, .6);
     }
 
-    /* Filtres accessibles */
     .filters {
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
-      padding: 1.5rem;
+      justify-content: center;
+      margin-bottom: 2rem;
       background: #1a1a1a;
+      padding: 1rem;
+      border-radius: var(--radius);
     }
 
     .filters label {
       font-size: .9rem;
-      min-width: 120px;
+      display: flex;
+      flex-direction: column;
+      gap: .2rem;
     }
 
-    .filters select, .filters input {
-      width: 100%;
-      padding: .5rem;
+    .filters select,
+    .filters input {
+      padding: .4rem .6rem;
+      border-radius: var(--radius);
+      border: none;
+      font-size: .9rem;
     }
 
-    /* Grid produits performante */
     .products {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 1.5rem;
-      padding: 1.5rem;
+      gap: 2rem;
+      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+      padding: 1rem;
     }
 
     .card {
-      background: #1e1e1e;
+      background: var(--gray);
       border-radius: var(--radius);
-      overflow: hidden;
-      transition: transform .2s;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: transform var(--transition), opacity .6s;
+    }
+
+    .card.show {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 5px 15px rgba(201, 162, 39, 0.3);
+      transform: translateY(-4px);
     }
 
     .card img {
       width: 100%;
-      height: 320px;
-      object-fit: cover;
+      border-radius: var(--radius);
+      margin-bottom: .5rem;
     }
 
-    .card-content {
-      padding: 1rem;
+    .quick-info {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0, 0, 0, .75);
+      color: #fff;
+      padding: .5rem;
+      font-size: .8rem;
+      opacity: 0;
+      transition: opacity var(--transition);
     }
 
-    /* Footer structuré */
+    .card:hover .quick-info {
+      opacity: 1;
+    }
+
+    .price {
+      font-size: 1.2rem;
+      color: var(--gold);
+      margin-bottom: .8rem;
+    }
+
+    button {
+      background: var(--gold);
+      color: var(--black);
+      border: none;
+      padding: .7rem 1.4rem;
+      border-radius: var(--radius);
+      cursor: pointer;
+      font-weight: 600;
+      transition: background var(--transition);
+    }
+
+    button:hover {
+      background: #fff;
+      color: var(--black);
+    }
+
     footer {
       background: #000;
-      padding: 3rem 1rem;
-      margin-top: 3rem;
+      color: #fff;
+      padding: 2rem 1rem;
+      font-size: .9rem;
     }
 
-    /* Animations performantes */
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+    .footer-inner {
+      display: grid;
+      gap: 1.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      max-width: 1200px;
+      margin: auto;
     }
 
-    /* Etc... */
+    footer h3 {
+      color: var(--gold);
+      margin-bottom: .5rem;
+    }
+
+    footer a {
+      color: #fff;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      color: var(--gold);
+    }
+
+    .footer-bottom {
+      text-align: center;
+      margin-top: 1.5rem;
+      font-size: .8rem;
+    }
+
+    #toast {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%) translateY(100px);
+      background: var(--gold);
+      color: #111;
+      padding: .6rem 1.2rem;
+      border-radius: 6px;
+      font-size: .9rem;
+      font-weight: 600;
+      opacity: 0;
+      transition: transform var(--transition), opacity var(--transition);
+      z-index: 9999;
+    }
+
+    #toast.show {
+      transform: translateX(-50%) translateY(0);
+      opacity: 1;
+    }
+
+    #exitPop {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, .7);
+      opacity: 0;
+      visibility: hidden;
+      transition: var(--transition);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+
+    #exitPop>div {
+      background: #111;
+      color: #fff;
+      padding: 2rem;
+      border-radius: var(--radius);
+      max-width: 400px;
+      text-align: center;
+    }
   </style>
 </head>
-
 <body>
   <!-- Promo banner -->
   <div id="promoBar">
